frontend/tests/cases/positive/interface-simple-16.gr
data A a b = A

interface Simple (a : Type -> Type) where
  simple : forall (b : Type) . b -> a b

-- kind should be okay
instance Simple (A a) where
  simple _ = A
