frontend/tests/cases/negative/kindMismatchInInstanceHeadComplexDT.gr
interface Simple (a : Type -> Type)

data A a = A

data B = B

-- (A B) has wrong kind
instance Simple (A B)
